--- a/package.json
+++ b/package.json
@@ -3,10 +3,14 @@
   "type": "module",
   "name": "test-1",
   "scripts": {
-    "start": "node index.js"
+    "start": "node index.js",
+    "test": "jest"
   },
   "license": "ISC",
   "dependencies": {
     "express": "4.17.1"
+  },
+  "devDependencies": {
+    "jest": "^26.6.3"
   }
 }
