--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,21 +1,24 @@
+# nombre de la acción
 name: CI
 
-# Controls when the action will run. 
+# La acción se disparará con cada push al master
 on:
   push:
     branches: [ main ]
 
-# A workflow run is made up of one or more jobs that can run sequentially or in parallel
+# los trabajos que ejecutará la acción
 jobs:
+  # primero vemos que todos los tests pasen
   test:
-    # runs on the latest Ubuntu
     runs-on: ubuntu-latest 
     steps:
-    - name: Test inside docker
+    - name: Ejecutamos los test dentro de docker
       run: docker run --rm vieraleonel1/tnt2021:untdf-01-03-test-pasa npm test
 
+  # luego activamos el build y deploy de heroku 
   build:
     needs: test
+    # establecemos la dependencia con la tarea anterior
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
